@@ -3,3 +3,4 @@ LABEL authors="renatoctorres"
 WORKDIR /app
 COPY build/libs/template-spring-webflux-0.0.1-SNAPSHOT.jar app.jar
 ENTRYPOINT ["java","-jar","app.jar"]
+CMD ["java", "-jar","-XX:+EnableDynamicAgentLoading", "app.jar"]
